--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,3 +29,9 @@
     </table>
   </div>  
 </div>
+<div class="row">
+<div class="col-sm-12">
+	<button class="btn btn-primary" (click)="pumpOn()">Pump On</button>
+	<button class="btn btn-primary" (click)="pumpOff()">Pump Off</button>
+	</div>
+</div>
